fix for hamburger spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -131,11 +131,6 @@
 
 }
 
-@media (min-width: 300px) and @media (max-width: 574px){
-    .menuButton {
-        left: calc(100% - 5px);
-    }
-}
 
 @media (max-width: 575px) {
     .HeaderContainer {
@@ -155,7 +150,7 @@
 
     .menuButton {
         display: inline;
-        left: calc(100% - 5px);
+        left: calc(100% - 10px);
     }
 
 
